--- a/source/stylesheets/components/_landing-pages.sass
+++ b/source/stylesheets/components/_landing-pages.sass
@@ -181,13 +181,19 @@ body.simband_index .content
     +respond-to('tablet')
       padding-left: 37.5%
   .landing-header
-    background: url('/images/landing/simband-header.png') no-repeat 0 -15px
-    background-position: -170px -15px
+    background: url('/images/landing/simband-header.png') no-repeat 0 0
+    background-size: 300%
+    background-position: left bottom
+    +respond-to('450px')
+      background-size: 200%
+    +respond-to('650px')
+      background-position: left top
+      background-size: 200%
     +respond-to('tablet')
-      background-size: 100%
-      background-position: left center
-    +respond-to('desktop')
-      background-position: 0 -40px
+      background-size: cover
+      background-position: 0 0
+    +respond-to('1150px')
+      background-position: 0 -50px
     .mask
       background: rgba(255,255,255, 0.7)
       +respond-to('tablet')
