comments out topics on /community

--- a/source/community/index.haml
+++ b/source/community/index.haml
@@ -5,12 +5,12 @@ nav:
 
 .community-wrapper{ data: { view: "Community" } }
 
-  %section.community-list
-    .community-list-header
-      %h2 Topics
-      %a{:href => "#"} All »
-    .community-list-body
-      .topics
+  / %section.community-list
+  /   .community-list-header
+  /     %h2 Topics
+  /     %a{:href => "#"} All »
+  /   .community-list-body
+  /     .topics
 
   %section.community-list
     .community-list-header
