--- a/source/stylesheets/components/_home.sass
+++ b/source/stylesheets/components/_home.sass
@@ -2,8 +2,11 @@ body.index
 
   .alpha.welcome
     +source-sans
-    background: url('/images/landing/home_bg.png') no-repeat left 20%
-    background-size: 100%
+    background: url('/images/landing/home_bg.png') no-repeat left center
+    background-size: cover
+    +respond-to('600px')
+      background-position: left 20%
+      background-size: 100%
     padding: 30px 55px
     h1
       font-size: 24px
