--- a/source/stylesheets/components/_landing-pages.sass
+++ b/source/stylesheets/components/_landing-pages.sass
@@ -77,6 +77,8 @@
   .landing-block
     display: block
     color: inherit
+    h2
+      margin-top: 0
     &:hover
       border-bottom: none
     span.learn-more
