--- a/source/stylesheets/components/_landing-pages.sass
+++ b/source/stylesheets/components/_landing-pages.sass
@@ -11,12 +11,30 @@
         overflow: hidden
       li
         text-align: center
-        padding: 20px
-        padding-bottom: 80px
+        padding: 10px
         margin: 0
+        border-bottom: 1px solid #E9EAEC
+        position: relative
+        +respond-to('tablet')
+          position: static
+        &:last-child
+          border-bottom: none
         +respond-to('tablet')
           float: left
           width: 25%
+          padding: 20px
+          padding-bottom: 80px
+          border-bottom: none
+        h2
+          margin: 0
+        p
+          width: 80%
+          margin: 10px 10%
+          padding-bottom: 55px
+          +respond-to('tablet')
+            margin: 0
+            margin: 10px 0
+            width: auto
         span.learn-more
           position: absolute
           bottom: 40px
@@ -24,8 +42,9 @@
           color: #0057B8
       .section-image
         line-height: 100px
-        margin-bottom: 20px
         padding: 20px
+        +respond-to('tablet')
+          margin-bottom: 20px
       img
         display: inline-block
         vertical-align: middle
@@ -41,21 +60,40 @@
     .landing-header
 
       h1
-        font-size: 44px
+        font-size: 26px
         font-weight: 300
         color: #0057B8
         margin-bottom: 14px
         line-height: 1.3em
       p
         margin: 0
-        font-size: 30px
+        font-size: 18px
         color: #525E68
         font-weight: 300
         line-height: 1.3em
         margin-bottom: 28px
       .button
-        font-size: 24px
+        font-size: 17px
         font-weight: 300
+        padding: 15px 0
+        width: 100%
+        text-align: center
+      .mask
+        p
+          font-size: 18px
+
+      +respond-to('tablet')
+        h1
+          font-size: 44px
+        p
+          font-size: 30px
+        .button
+          font-size: 24px
+          padding: 15px 50px
+          width: auto
+        .mask
+          p
+            font-size: 26px
 
     .landing-subheader
       background: #0057B8
@@ -64,11 +102,21 @@
       min-height: 200px
       h2
         margin: 0 0 12px 0
+        font-size: 24px
+        +respond-to('tablet')
+          font-size: 30px
       p
-        margin: 0 0 14px 0
         font-size: 17px
         line-height: 1.4em
+        width: 100%
+        margin: 0 auto
+        position: relative
+        font-size: 15px
+        margin-bottom: 10px
         +respond-to('tablet')
+          margin: 0 0 14px 0
+          font-size: 17px
+          margin-bottom: 0
           width: 66%
       span.learn-more
         &:hover
@@ -142,28 +190,29 @@ body.sensor-module_index .landing-links
   border-top: 2px solid #E9EAEC
 
 body.sensor-module_index .content
-  .landing-header .mask
-    padding: 80px 90px
-    +respond-to('tablet')
-      padding-right: 37.5%
   .landing-header
-    background: url('/images/landing/sensor_bg.png') no-repeat
-    background-position: center center
-    background-size: 100%
     +respond-to('tablet')
+      background: url('/images/landing/sensor_bg.png') no-repeat
+      background-size: 100%
       background-position: center 0px
     +respond-to('desktop')
       background-position: center -90px
     .mask
       background: rgba(255,255,255, 0.7)
-      padding-bottom: 100px
+      padding: 25px 20px
+      +respond-to('tablet')
+        padding-right: 37.5%
+        padding: 80px 90px
+        padding-bottom: 100px
       a
         background-color: #685BC7
       +respond-to('tablet')
         +background(linear-gradient(to right, rgba(255,255,255, 0.9) 60%, rgba(255,255,255,0)))
   .landing-subheader
     background-color: #00A9E0
+    text-align: center
     +respond-to('tablet')
+      text-align: left
       padding-left: 40.0%
       background: #00A9E0 url('/images/landing/simband_venn@2x.png') no-repeat 10% 35px
       background-size: 236px auto
@@ -179,29 +228,26 @@ body.sensor-module_index .content
       background-position: 24% 35px
 
 body.simband_index .content
-  .landing-header .mask, .landing-subheader
-    +respond-to('tablet')
-      padding-left: 37.5%
   .landing-header
-    background: url('/images/landing/simband-header.png') no-repeat 0 0
-    background-size: 300%
-    background-position: left bottom
-    +respond-to('450px')
-      background-size: 200%
-    +respond-to('650px')
-      background-position: left top
-      background-size: 200%
     +respond-to('tablet')
       background-size: cover
       background-position: 0 0
+      background: url('/images/landing/simband-header.png') no-repeat 0 0
     +respond-to('1150px')
       background-position: 0 -50px
     .mask
       background: rgba(255,255,255, 0.7)
+      padding: 25px 20px
       +respond-to('tablet')
+        padding: 70px
         +background(linear-gradient(to right, rgba(255,255,255,0), #ffffff))
-  .landing-subheader
+  .landing-header .mask, .landing-subheader
     +respond-to('tablet')
+      padding-left: 37.5%
+  .landing-subheader
+    text-align: center
+    +respond-to('tablet')
+      text-align: left
       background: #0057B8 url('/images/landing/sami.png') no-repeat 22% 35px
       background-size: 120px
     +respond-to('desktop')
