--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -5,6 +5,7 @@
     / Always force latest IE rendering engine or request Chrome Frame
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %meta{:content => "-XrobdGz8qSxsSRS53hRzgO5n984NO1BrvM6D5aRrAE", :name => "google-site-verification"}/
+    %meta{:content => "B7AE2235EAC23F0B08756382DE5D292F", :name => "msvalidate.01"}/
     / Use title if it's in the page YAML frontmatter
     %meta{name: "viewport", content: "width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0"}/
     %title= data.page.title || "SAMSUNG"
