Mailing list modal

--- a/source/_footer.haml
+++ b/source/_footer.haml
@@ -1,5 +1,8 @@
 .feedback
-  %a#feedback{href: '#feedback'}
+  %a#mailing-list{href: '#'}
+    %i.img.mailing-list-large
+    Join mailing list
+  %a#feedback.large-icon{href: '#feedback'}
     %i.fa.fa-send-o
     Feedback
     
