[#81777884] set minimum nav height in css

--- a/source/stylesheets/components/_section-nav.sass
+++ b/source/stylesheets/components/_section-nav.sass
@@ -40,8 +40,9 @@
   +transition-timing-function
   background-color: #323F4A
   left: 0
-  overflow-y: auto
+  min-height: 100vh
   overflow-x: hidden
+  overflow-y: auto
   padding: 20px 20px 100px 20px
   position: fixed
   top: -100%
