--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -226,6 +226,11 @@
     position: relative
     margin: 0 auto
     overflow: hidden
+    padding-bottom: 175px
+    +respond-to(tablet)
+      padding-bottom: 300px
+    +respond-to(desktop)
+      padding-bottom: 400px
     +respond-to('1200px')
       max-width: 620px
 
