Changing breakpoint to ensure no bad wrapping of offsite links

--- a/source/stylesheets/components/_header.sass
+++ b/source/stylesheets/components/_header.sass
@@ -174,7 +174,7 @@
       background: url('/images/layout/offsite.png') no-repeat center right
       background-size: 24px
       margin-top: 4px
-    +respond-to(desktop)
+    +respond-to(1090px)
       float: right
     li a
       +opacity(1)
