--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -8,6 +8,7 @@ $default-transition-duration : .4s
 $default-transition-function : ease-in-out
 
 $sidebar-width: 258px
+$toc-width: 258px
 
 = source-sans($alternates: "'Helvetica Neue', 'Arial', sans-serif")
   $font-family: "'Source Sans Pro', #{$alternates}"
