Adding Site Title to page title

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -8,7 +8,10 @@
     %meta{:content => "B7AE2235EAC23F0B08756382DE5D292F", :name => "msvalidate.01"}/
     / Use title if it's in the page YAML frontmatter
     %meta{name: "viewport", content: "width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0"}/
-    %title= data.page.title || "SAMSUNG"
+    - if data.page.title != "Voice of the Body"
+      %title= data.page.title + " — Voice of the Body" || "Samsung — Voice of the Body"
+    -else
+      %title= data.page.title
     = partial :uservoice
     = stylesheet_link_tag "application"
     = javascript_include_tag  "manifest"
