Adding text to logo/header h1

--- a/source/stylesheets/components/_header.sass
+++ b/source/stylesheets/components/_header.sass
@@ -141,6 +141,7 @@
     margin: 0 18px 0 0
     width: image-width('layout/samsung-strategy.png')
     vertical-align: middle
+    text-indent: -100000px
     a
       display: block
       height: 100%
