Fixing padding issue, fixing issue with side nav toggle breaking in ios7

--- a/source/stylesheets/lib/_normalize.scss
+++ b/source/stylesheets/lib/_normalize.scss
@@ -90,8 +90,7 @@ a:focus {
  * Improves readability when focused and also mouse hovered in all browsers.
  */
 
-a:active,
-a:hover {
+a:active {
     outline: 0;
 }
 
