--- a/source/stylesheets/components/_landing-pages.sass
+++ b/source/stylesheets/components/_landing-pages.sass
@@ -26,6 +26,7 @@
           padding-bottom: 80px
           border-bottom: none
         h2
+          padding-top: 0
           margin: 0
         p
           width: 80%
@@ -102,6 +103,7 @@
       min-height: 200px
       h2
         margin: 0 0 12px 0
+        padding-top: 0
         font-size: 24px
         +respond-to('tablet')
           font-size: 30px
@@ -126,7 +128,7 @@
     display: block
     color: inherit
     h2
-      margin-top: 0
+      padding-top: 0
     &:hover
       border-bottom: none
     span.learn-more
@@ -284,6 +286,7 @@ body.simband_index .content
       vertical-align: middle
       margin-top: 0
       margin-bottom: 0
+      padding-top: 0
     h2
       font-weight: 400
     a
