--- a/source/stylesheets/_globals.sass
+++ b/source/stylesheets/_globals.sass
@@ -142,6 +142,7 @@ hr.typography
       max-width: none
   p img 
     width: 100%
+    max-width: 100%
   h2 + h3, h4 + h5
     padding-top: 3em
     margin-top: -2.25em
@@ -359,7 +360,7 @@ a.learn-more
   text-transform: uppercase
   &:after
     content: ' \00bb'
-a.button
+a.button, .main a.button
   color: #fff
   text-decoration: none
   &:hover
