--- a/source/stylesheets/_globals.sass
+++ b/source/stylesheets/_globals.sass
@@ -140,9 +140,8 @@ hr.typography
     max-width: 620px
     +landing-page
       max-width: none
-  p img 
+  p img, img
     width: 100%
-    max-width: 100%
   h2 + h3, h4 + h5
     padding-top: 3em
     margin-top: -2.25em
