Forcing feedback in section nav to display on the right

--- a/source/stylesheets/components/_section-nav.sass
+++ b/source/stylesheets/components/_section-nav.sass
@@ -109,7 +109,7 @@
       +respond-to('desktop')
         color: #fff
         background: #1caade
-  #feedback
+  #feedback-side
     display: inline-block
   .section-title
     color: #00A9E0
