Join mailing list turns to Mailing List

--- a/source/_footer.haml
+++ b/source/_footer.haml
@@ -1,7 +1,7 @@
 .feedback
   %a#mailing-list{href: '#'}
     %i.img.mailing-list-large
-    Join mailing list
+    Mailing List
   %a#feedback.large-icon{href: '#feedback'}
     %i.fa.fa-send-o
     Feedback
