[#82502632] update navigation colors to match landing page colors

--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -43,3 +43,18 @@ $toc-width: 258px
   body.sensor-module_index &,
   body.sami_index &
     @content
+
+= landing-bg-colors
+  .simband &
+    background-color: #685BC7
+  .sensor-module &
+    background-color: #00B140
+  .sami &
+    background-color: #00A9E0
+  .simbase &
+    background-color: #685ec4
+  .community &
+    background-color: #009CA6
+  .data &
+    background-color: #0057B8
+
