--- a/source/index.haml
+++ b/source/index.haml
@@ -47,7 +47,7 @@ nav:
     %li
       %a.landing-block{href: "/bioinformatics"}
         %h2 Bioinformatics
-        %p This is a living information repository for Simband, presented here as a starting point for developers and researchers. Browse our findings and pull them together any way you’d like.
+        %p This is a data repository of vital signs we are building with Simband, presented here as a starting point for developers and researchers. Browse our findings and pull them together any way you’d like.
         %span.learn-more Read More
 
 %footer.footer
