--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -82,7 +82,7 @@
                   %li
                     %a#mailing-list{href: '#'}
                       %i.img.mailing-list-small
-                      Join mailing list
+                      Mailing List
               %li.section-nav-footer
                 = partial :footer
         .lightbox-content
