add table of contents title
Conflicts:
	source/stylesheets/_globals.sass

--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -9,6 +9,7 @@ $default-transition-function : ease-in-out
 
 $sidebar-width: 258px
 $toc-width: 258px
+$content-top-padding: 39px
 
 = source-sans($alternates: "'Helvetica Neue', 'Arial', sans-serif")
   $font-family: "'Source Sans Pro', #{$alternates}"
