Ensuring that mailing list is visible on FF

--- a/source/stylesheets/components/_section-nav.sass
+++ b/source/stylesheets/components/_section-nav.sass
@@ -69,6 +69,8 @@
     position: absolute
     .meta-section-nav-item
       display: block
+      &.section-nav-item
+        margin-bottom: 100px
   +respond-to('desktop')
     margin-left: 0
     left: 0
