Fixes radio button margin issue

--- a/source/stylesheets/components/_form.sass
+++ b/source/stylesheets/components/_form.sass
@@ -35,6 +35,7 @@
         max-width: 400px
       .fsOptionLabel
         +source-sans
+        padding-left: 1px
       .fsSectionHeader
         padding: 0
       .fsSubmit
