Fix 1px issue on landing page

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -255,6 +255,7 @@
     font-weight: 600
   +landing-page
     padding: 0
+    border-left: none
   +respond-to('tablet')
     padding: $content-top-padding 50px 50px 52px
   +respond-to('desktop')
