Adding new site description to meta tag

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -6,6 +6,7 @@
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %meta{:content => "-XrobdGz8qSxsSRS53hRzgO5n984NO1BrvM6D5aRrAE", :name => "google-site-verification"}/
     %meta{:content => "B7AE2235EAC23F0B08756382DE5D292F", :name => "msvalidate.01"}/
+    %meta{:content => "Voice of the body is a reference platform for scientists, researchers and startups to help accelerate innovation around digital health. Simband is a modular reference platform for wearable sensors and Simsense is the world's most advanced sensor module. SAMI is a data exchange platform that enables any device or sensor to push its data to the cloud. Applications, services and devices can then use that data through simple APIs.", :name => "description"}
     / Use title if it's in the page YAML frontmatter
     %meta{name: "viewport", content: "width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0"}/
     - if data.page.title != "Voice of the Body"
