Synchronizing mobile nav

--- a/source/stylesheets/components/_header.sass
+++ b/source/stylesheets/components/_header.sass
@@ -14,6 +14,7 @@
     height: 50px
     position: relative
     width: 50px
+    float: right
     .fa-close
       +opacity(0)
     .fa
@@ -41,8 +42,7 @@
   +respond-to(tablet)
     position: static
     height: auto
-    .toggle-nav
-      display: none
+
   a
     color: #ffffff
   .simband &
@@ -63,6 +63,29 @@
   +respond-to('tablet')
     background-color: transparent
   
+
+.logo
+  +hidpi('layout/samsung-strategy')
+  display: inline-block
+  height: image-height('layout/samsung-strategy.png')
+  margin: 0 18px 0 0
+  width: image-width('layout/samsung-strategy.png')
+  vertical-align: middle
+  text-indent: -100000px
+  a
+    display: block
+    height: 100%
+    width: 100%
+
+.mobile-nav
+  height: 50px
+  .logo
+    vertical-align: top
+    margin-left: 10px
+    margin-top: 9px
+  +respond-to('tablet')
+    display: none
+
 .main-nav
   background: #525e68
   overflow-x: scroll
@@ -70,8 +93,16 @@
   padding: 7px 24px 7px 24px
   white-space: nowrap
   position: relative
+  padding-top: 14px
+  height: 50px
   +respond-to('tablet')
     overflow: hidden
+    height: auto
+    padding-top: 0
+  .logo
+    display: none
+    +respond-to('tablet')
+      display: inline-block
   .simband &
     +mobile-nav(#685BC7)
   .sensor-module &
@@ -133,19 +164,6 @@
       @include transform( rotate(270deg))
       +respond-to('1080px')
         line-height: 84px
-
-  .logo
-    +hidpi('layout/samsung-strategy')
-    display: inline-block
-    height: image-height('layout/samsung-strategy.png')
-    margin: 0 18px 0 0
-    width: image-width('layout/samsung-strategy.png')
-    vertical-align: middle
-    text-indent: -100000px
-    a
-      display: block
-      height: 100%
-      width: 100%
 
   .nav-list
     @extend %inline-list
