--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -32,14 +32,19 @@
           .beta
             %span Beta
           %h1.logo= link_to data.page.title, '/'
-          %ul.nav-list
+          .nav-container
             - children = page_data(docs)['nav']
-            - children.each do |child|
-              - page = page_or_index("/#{child}")
-              = nav_link_to page_title(page), page.url
-          %ul.offsite-nav-list
-            %li
-              %a{href: "http://developer.samsungsami.io"} developer.samsungsami.io
+            .navigation-shroud
+            .current-page
+              = display_current children
+            .nav-list-container
+              %ul.nav-list
+                - children.each do |child|
+                  - page = page_or_index("/#{child}")
+                  = nav_link_to page_title(page), page.url
+              %ul.offsite-nav-list
+                %li
+                  %a{href: "http://developer.samsungsami.io"} developer.samsungsami.io
       .content.side
         - unless landing_page
           %a.toggle-menu{href: '#'}
