--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -15,6 +15,7 @@
       %title= data.page.title
     = partial :uservoice
     = stylesheet_link_tag "application"
+    = stylesheet_link_tag "print",{media: 'print'}
   %body{:class => page_classes, data: {spy: 'scroll', target: '#toc', offset: 50}}
     - docs = sitemap.find_resource_by_path('index.html')
     - landing_page = ['/', '/simband/', '/sensor-module/', '/sami/'].include? current_page.url
