--- a/source/stylesheets/styleguide.css.sass
+++ b/source/stylesheets/styleguide.css.sass
@@ -1,3 +1,11 @@
+.main.content
+  overflow: visible
+  padding: 0
+  padding-right: 120px
+  min-width: auto
+  dl
+    max-width: none
+
 .styleguide
   $title-col-width: 120px
   padding-left: $title-col-width
