--- a/source/typography.html.haml
+++ b/source/typography.html.haml
@@ -144,6 +144,15 @@ layout: 'styleguide'
 
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam laoreet metus, id elementum tellus vulputate et. `Mauris eros est,`{:.param} pulvinar vitae condimentum ac, laoreet tincidunt sem. 
 
+      ## HTTP Request Headers
+
+      `GET get something /this-is-a-param`{:.param.http}
+
+      `POST post something http://example.org/test`{:.param.http}
+
+      `DELETE delete something http://something-else`{:.param.http}
+
+      `PUT put something http://something-else`{:.param.http}
       
       ## Request Parameters
 
