--- a/source/stylesheets/components/_header.sass
+++ b/source/stylesheets/components/_header.sass
@@ -15,8 +15,6 @@
     position: relative
     width: 50px
     float: right
-    .fa-close
-      +opacity(0)
     .fa
       +transition
       height: 16px
@@ -27,6 +25,13 @@
       margin-left: -8px
       margin-top: -8px
       text-align: center
+    .fa.close
+      +opacity(0)
+      +hidpi('layout/close')
+      height: 20px
+      width: 20px
+      margin-left: -10px
+      margin-top: -10px
     .menu-expanded &
       +rotate(180deg)
   .menu-expanded &
@@ -37,7 +42,7 @@
         display: none
     .fa-bars
       +opacity(0)
-    .fa-close
+    .fa.close
       +opacity(1)
   +respond-to(tablet)
     position: static
